# poetry2nix

overrides/: default.nix
tests/: default.nix
tests/tiktoken/: default.nix  pyproject.toml
