[tool.poetry]
name = "test-tiktoken"
version = "0.1.0"
description = "Test of python tiktoken package"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tiktoken = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
